--- a/app/src/main/res/drawable/whiteframestyle.xml
+++ b/app/src/main/res/drawable/whiteframestyle.xml
@@ -3,11 +3,11 @@
     android:thickness="0dp"
     android:shape="rectangle">
     <stroke android:width="2dp"
-        android:color="#ffffff"/>
+        android:color="#bfbfbf"/>
     <corners android:radius="5dp" />
     <gradient
-        android:startColor="#efefef"
-        android:endColor="#c7e8f3"
+        android:startColor="#ffffff"
+        android:endColor="#ffffff"
         android:type="linear"
         android:angle="270"/>
 </shape>
