--- a/app/src/main/res/layout/main_page_activity.xml
+++ b/app/src/main/res/layout/main_page_activity.xml
@@ -31,7 +31,8 @@
             android:textColor="#000000"
             android:text="КУРС ВАЛЮТЫ НА СЕГОДНЯ"
             android:textSize="24dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:fontFamily="@font/russo_one"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/first_recycler_view"
