--- a/app/src/main/res/layout/second_card_mainpage_activity.xml
+++ b/app/src/main/res/layout/second_card_mainpage_activity.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:contentPadding="5dp"
-    app:cardElevation="3dp"
-    app:cardCornerRadius="3dp"
+    app:contentPadding="1dp"
+    app:cardElevation="1dp"
+    app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
     android:layout_marginRight="16dp"
     android:layout_marginLeft="16dp"
@@ -18,23 +18,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
         android:orientation="horizontal"
-        android:padding="4dp">
+
+
+       >
 
 
         <ImageView
             android:id="@+id/second_resources_images"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginRight="1dp"
+
             android:src="@drawable/gold1" />
 
         <RelativeLayout
@@ -61,7 +55,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.066"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:fontFamily="@font/russo_one"/>
 
                 <TextView
                     android:id="@+id/second_name_resources_text"
@@ -78,7 +73,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/second_charcode_resources_text"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="0.0"
+                    android:fontFamily="@font/russo_one"/>
 
                 <TextView
                     android:id="@+id/second_value_resources_text"
@@ -92,11 +88,12 @@
                     android:text="1774,45$"
                     android:textAlignment="center"
                     android:textColor="#fffafa"
-                    android:textSize="24sp"
+                    android:textSize="28sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/second_name_resources_text"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:fontFamily="@font/alegreya_sc"/>
 
                 <TextView
                     android:id="@+id/second_option_resources_text"
