--- a/app/src/main/res/layout/third_page_activity_recycler.xml
+++ b/app/src/main/res/layout/third_page_activity_recycler.xml
@@ -7,22 +7,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp"
-    tools:context=".ThirdPageMainActivity">
+    tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/third_main_title_text"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center_horizontal"
-        android:textColor="#000000"
-        android:text="КУРС ВАЛЮТЫ ВСЕХ СТРАН"
-        android:textSize="24dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/third_main_title_text"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center_horizontal"
+            android:text="КУРС ВАЛЮТЫ ВСЕХ СТРАН"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/my_recycler_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <androidx.recyclerview.widget.RecyclerView
