--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,13 +23,16 @@
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">@dimen/text_size_xxl</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@drawable/frametextstyle</item>
+        <item name="android:background">@drawable/whiteframestyle</item>
 
     </style>
 
     <style name="FitStyle">
         <item name="android:layout_width">@dimen/fit</item>
         <item name="android:layout_height">@dimen/fit</item>
+    </style>
+    <style name="customfontstyle" parent="@android:style/TextAppearance.Small">
+        <item name="android:fontFamily">@font/myfont</item>
     </style>
 
 
